fix carousel olympics and testimonials

--- a/platform/index.html
+++ b/platform/index.html
@@ -6,21 +6,21 @@
     <title>Squad In Touch</title>
     <link rel="stylesheet" href="../dist/style.css" type="text/css"/>
     <link rel="shortcut icon" type="image/ico" href="../src/icon/favicon.ico"/>
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-        ga('create', 'UA-77360065-1', 'auto');
-        ga('send', 'pageview');
-    </script>
+    <!--<script>-->
+        <!--(function (i, s, o, g, r, a, m) {-->
+            <!--i['GoogleAnalyticsObject'] = r;-->
+            <!--i[r] = i[r] || function () {-->
+                <!--(i[r].q = i[r].q || []).push(arguments)-->
+            <!--}, i[r].l = 1 * new Date();-->
+            <!--a = s.createElement(o),-->
+                <!--m = s.getElementsByTagName(o)[0];-->
+            <!--a.async = 1;-->
+            <!--a.src = g;-->
+            <!--m.parentNode.insertBefore(a, m)-->
+        <!--})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');-->
+        <!--ga('create', 'UA-77360065-1', 'auto');-->
+        <!--ga('send', 'pageview');-->
+    <!--</script>-->
 
 </head>
 
@@ -162,7 +162,7 @@
 
 
     <!--SLIDER-->
-    <div id="myCarousel" class="carousel slide platform_slider" data-interval="10000" data-ride="carousel">
+    <div id="myCarousel" class="carousel slide platform_slider" data-interval="false" data-ride="carousel">
         <div class="carousel-inner">
 
             <!--first slide-->
@@ -186,18 +186,19 @@
                         <div class="slider_content-bottom hidden-xs">
 
                             <p>
-                                "Squad In Touch provides everything we need to organise school teams and clubs
-                                easily.
-                                Anything that is not a feature can be sorted out effectively and the support
-                                we have been given setting this up has been great.
-                                This really is one of the best platforms out there to promote school sport and
-                                the time
-                                saving potential alone is worth the subscription fee"
+                                “We have been using Squad in Touch now since September 2017. The biggest benefit to
+                                all the staff within the department is that it simply saves time whilst improving
+                                parental contact. Fixtures can quickly be entered onto the calendar and team sheets
+                                very quickly made. This can include sending confirmation to parents/carers regarding
+                                the fixture and details. <span><a href="#priory-school" data-toggle="modal"> Read more...</a></span>"
+                                <!--I strongly believe that Squad in Touch will benefit all-->
+                                <!--schools who use it and I have found that they are very open and accommodating to-->
+                                <!--suggestions for further developments.”-->
                                 <!--<a href="#platform_read_more" data-toggle="modal">Read more</a>-->
                             </p>
 
                             <p>
-                                <strong>Jack Brown</strong>, Subject Leader for PE, Sir John Talbot's School
+                                <strong>Mr Peter Walters</strong>, Head of PE, The Priory School, Shrewsbury
                             </p>
                         </div>
                     </div>
@@ -205,18 +206,18 @@
                 <div class="slider_content-bottom visible-xs">
 
                     <p>
-                        "Squad In Touch provides everything we need to organise school teams and clubs
-                        easily.
-                        Anything that is not a feature can be sorted out effectively and the support
-                        we have been given setting this up has been great.
-                        This really is one of the best platforms out there to promote school sport and
-                        the time
-                        saving potential alone is worth the subscription fee"
+                        “We have been using Squad in Touch now since September 2017. The biggest benefit to
+                        all the staff within the department is that it simply saves time whilst improving
+                        parental contact. Fixtures can quickly be entered onto the calendar and team sheets
+                        very quickly made. This can include sending confirmation to parents/carers regarding
+                        the fixture and details. I strongly believe that Squad in Touch will benefit all
+                        schools who use it and I have found that they are very open and accommodating to
+                        suggestions for further developments.”
                         <!--<a href="#platform_read_more" data-toggle="modal">Read more</a>-->
                     </p>
 
                     <p>
-                        <strong>Jack Brown</strong>, Subject Leader for PE, Sir John Talbot's School
+                        <strong>Mr Peter Walters</strong>, Head of PE, The Priory School, Shrewsbury
                     </p>
                 </div>
             </div>
@@ -599,7 +600,11 @@
     <div class="container">
         <h3>Testimonials</h3>
     </div>
-
+    <div id="carousel-testimonials" class="carousel slide multi-item-carousel" data-interval="0" data-ride="carousel">
+        <!-- Слайды карусели -->
+        <div class="carousel-inner">
+            <!-- Слайды создаются с помощью контейнера с классом item, внутри которого помещается содержимое слайда -->
+            <div class="active item">
     <div class="container testimonial">
         <div class="row">
             <div class="col-md-4 col-sm-4">
@@ -625,7 +630,9 @@
             </div>
         </div>
     </div>
+            </div>
 
+            <div class="item">
     <div class="container testimonial">
         <div class="row">
             <div class="col-md-4 col-sm-4">
@@ -640,7 +647,7 @@
                     </h4>
                     <p>"We are delighted with Squad In Touch at Melbourne Junior School. They could not have been more
                         helpful in explaining how it works and accommodating our specific school's requirements in the
-                        set-up process. <span><a href="#melbourne-school" data-toggle="modal"> Read more..</a></span>"
+                        set-up process. <span><a href="#melbourne-school" data-toggle="modal"> Read more...</a></span>"
                         <br>
                         <br>
                         — Jim Jenkinson, PE & School Sport Coordinator, Melbourne Junior School
@@ -649,6 +656,85 @@
             </div>
         </div>
     </div>
+            </div>
+            <div class="item">
+                <div class="container testimonial">
+                    <div class="row">
+                        <div class="col-md-4 col-sm-4">
+                            <div class="testimonial_logo">
+                                <img src="../src/image/sir_john.png" alt="Sir John Talbot's school">
+                            </div>
+                        </div>
+                        <div class="col-md-7 col-sm-7">
+                            <div class="testimonial_content">
+                                <h4 class="testimonial_title">
+                                    John Talbot's School
+                                </h4>
+                                <p>"Squad in Touch provides everything we need to organise school teams and clubs easily.
+                                    Anything that is not a feature can be sorted out effectively and the support we have
+                                    been given setting this up has been great. This really is one of the best platforms
+                                    out there to promote school sport and the time saving potential alone is worth the
+                                    subscription fee"
+
+                                    <br>
+                                    <br>
+                                    — Jack Brown, Subject Leader for PE, Sir John Talbot's School
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="container testimonial">
+                    <div class="row">
+                        <div class="col-md-4 col-sm-4">
+                            <div class="testimonial_logo">
+                                <img src="../src/image/Priory.png" alt="Sir John Talbot's school">
+                            </div>
+                        </div>
+                        <div class="col-md-7 col-sm-7">
+                            <div class="testimonial_content">
+                                <h4 class="testimonial_title">
+                                    The Priory School
+                                </h4>
+                                <p>“We have been using Squad in Touch now since September 2017. The biggest benefit to
+                                    all the staff within the department is that it simply saves time whilst improving
+                                    parental contact. Fixtures can quickly be entered onto the calendar and team sheets
+                                    very quickly made. This can include sending confirmation to parents/carers regarding
+                                    the fixture and details. <span><a href="#priory-school" data-toggle="modal"> Read more...</a></span>"
+                                    <!--I strongly believe that Squad in Touch will benefit all-->
+                                    <!--schools who use it and I have found that they are very open and accommodating to-->
+                                    <!--suggestions for further developments.”-->
+
+                                    <br>
+                                    <br>
+                                    — Mr Peter Walters, Head of PE, The Priory School, Shrewsbury
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+    <a class="right carousel-control" href="#carousel-testimonials" data-slide="next">
+        <!--<div class="testimonial-bottom-background">-->
+        <div class="testimonials-button-background"></div>
+    <!--</div>-->
+    <!--<div class="slide-button-testimonials">-->
+        <!--<div class="container slide-button-container">-->
+            <!--<div class="slide-control-height">-->
+                <!--<a class="carousel-control slide-control sportsmens-slide" href="#carousel-testimonials"-->
+                   <!--data-slide="next">-->
+                    <!--<span class="glyphicon slide-content"></span>-->
+                <!--</a>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
+    </a>
 </section>
 <!---testimonials-mobile--->
 <section id="testimonials1" class="testimonial_section testimonial_section-platform visible-xs">
@@ -710,6 +796,48 @@
                                                      data-toggle="modal"> Read more..</a></span>" <br>
                             <br>
                             — Jim Jenkinson, PE & School Sport Coordinator, Melbourne Junior School
+                        </div>
+
+
+                    </div>
+
+                    <div class="item">
+                        <div class="testimonial-mobile">
+                            <div class="testimonial2-school-section">
+                                <img src="../src/image/sir_john.png" alt="Sir John Talbot's school">
+                            </div>
+                        </div>
+                        <div class="testimonials-title">
+                            <h4>John Talbot's School</h4></div>
+                        <div class="testimonials-subj">"We are delighted with Squad In Touch at Melbourne Junior School.
+                            "Squad in Touch provides everything we need to organise school teams and clubs easily.
+                            Anything that is not a feature can be sorted out effectively and the support we have been
+                            given setting this up has been great. This really is one of the best platforms out there to
+                            promote school sport and the time saving potential alone is worth the subscription fee" <br>
+                            <br>
+                            — Jack Brown, Subject Leader for PE, Sir John Talbot's School
+                        </div>
+
+
+                    </div>
+
+                    <div class="item">
+                        <div class="testimonial-mobile">
+                            <div class="testimonial2-school-section">
+                                <img src="../src/image/Priory.png" alt="Sir John Talbot's school">
+                            </div>
+                        </div>
+                        <div class="testimonials-title">
+                            <h4>The Priory School </h4></div>
+                        <div class="testimonials-subj">“We have been using Squad in Touch now since September 2017. The
+                            biggest benefit to all the staff within the department is that it simply saves time whilst
+                            improving parental contact. Fixtures can quickly be entered onto the calendar and team sheets
+                            very quickly made. This can include sending confirmation to parents/carers regarding the
+                            fixture and details. I strongly believe that Squad in Touch will benefit all schools who use
+                            it and I have found that they are very open and accommodating to suggestions for further
+                            developments.” <br>
+                            <br>
+                            — Mr Peter Walters, Head of PE, The Priory School, Shrewsbury
                         </div>
 
 
@@ -1138,6 +1266,37 @@
                     we can use it to demonstrate the impact sport is making on our students."
                     <br/>
                     <br>— Jim Jenkinson, PE & School Sport Coordinator, Melbourne Junior School
+                </div>
+                <!-- Футер модального окна -->
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- modal-priory -->
+<div id="priory-school" class="modal fade">
+    <div class="modal-center" data-dismiss="modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <!-- Заголовок модального окна -->
+                <div class="modal-header sportsmen_modal-header">
+                    <button type="button" class="close close-popup" data-dismiss="modal"
+                            aria-hidden="true">
+                    </button>
+                    <h4 class="modal-title">Testimonial</h4>
+                </div>
+                <!-- Основное содержимое модального окна -->
+                <div class="testimonials-title sportsmens_title">
+                    <h4>The Priory School</h4></div>
+                <div class="sportsmens_modal-biography"> “We have been using Squad in Touch now since September 2017.
+                    The biggest benefit to all the staff within the department is that it simply saves time whilst
+                    improving parental contact. Fixtures can quickly be entered onto the calendar and team sheets very
+                    quickly made. This can include sending confirmation to parents/carers regarding the fixture and
+                    details. I strongly believe that Squad in Touch will benefit all schools who use it and I have found
+                    that they are very open and accommodating to suggestions for further developments.”
+                    <br/>
+                    <br>— Mr Peter Walters, Head of PE, The Priory School, Shrewsbury
                 </div>
                 <!-- Футер модального окна -->
 
