--- a/sport/index.html
+++ b/sport/index.html
@@ -204,18 +204,19 @@
                                 <div class="slider_content-bottom hidden-xs">
 
                                     <p>
-                                        "Squad In Touch provides everything we need to organise school teams and clubs
-                                        easily.
-                                        Anything that is not a feature can be sorted out effectively and the support
-                                        we have been given setting this up has been great.
-                                        This really is one of the best platforms out there to promote school sport and
-                                        the time
-                                        saving potential alone is worth the subscription fee"
+                                        “We have been using Squad in Touch now since September 2017. The biggest benefit to
+                                        all the staff within the department is that it simply saves time whilst improving
+                                        parental contact. Fixtures can quickly be entered onto the calendar and team sheets
+                                        very quickly made. This can include sending confirmation to parents/carers regarding
+                                        the fixture and details. <span><a href="#priory-school" data-toggle="modal"> Read more...</a></span>"
+                                        <!--I strongly believe that Squad in Touch will benefit all-->
+                                        <!--schools who use it and I have found that they are very open and accommodating to-->
+                                        <!--suggestions for further developments.”-->
                                         <!--<a href="#platform_read_more" data-toggle="modal">Read more</a>-->
                                     </p>
 
                                     <p>
-                                        <strong>Jack Brown</strong>, Subject Leader for PE, Sir John Talbot's School
+                                        <strong>Mr Peter Walters</strong>, Head of PE, The Priory School, Shrewsbury
                                     </p>
                                 </div>
                             </div>
@@ -223,18 +224,17 @@
                         <div class="slider_content-bottom visible-xs">
 
                             <p>
-                                "Squad In Touch provides everything we need to organise school teams and clubs
-                                easily.
-                                Anything that is not a feature can be sorted out effectively and the support
-                                we have been given setting this up has been great.
-                                This really is one of the best platforms out there to promote school sport and
-                                the time
-                                saving potential alone is worth the subscription fee"
-                                <!--<a href="#platform_read_more" data-toggle="modal">Read more</a>-->
+                                “We have been using Squad in Touch now since September 2017. The biggest benefit to all
+                                the staff within the department is that it simply saves time whilst improving parental
+                                contact. Fixtures can quickly be entered onto the calendar and team sheets very quickly
+                                made. This can include sending confirmation to parents/carers regarding the fixture and
+                                details. I strongly believe that Squad in Touch will benefit all schools who use it and
+                                I have found that they are very open and accommodating to suggestions for further
+                                developments.”
                             </p>
 
                             <p>
-                                <strong>Jack Brown</strong>, Subject Leader for PE, Sir John Talbot's School
+                                <strong>Mr Peter Walters</strong>, Head of PE, The Priory School, Shrewsbury
                             </p>
                         </div>
                     </div>
@@ -1087,16 +1087,19 @@
             <div class="slider_content-bottom hidden-xs">
 
                 <p>
-                    "Squad In Touch provides everything we need to organise school teams and clubs easily.
-                    Anything that is not a feature can be sorted out effectively and the support
-                    we have been given setting this up has been great.
-                    This really is one of the best platforms out there to promote school sport and the time
-                    saving potential alone is worth the subscription fee"
+                    “We have been using Squad in Touch now since September 2017. The biggest benefit to
+                    all the staff within the department is that it simply saves time whilst improving
+                    parental contact. Fixtures can quickly be entered onto the calendar and team sheets
+                    very quickly made. This can include sending confirmation to parents/carers regarding
+                    the fixture and details. <span><a href="#priory-school" data-toggle="modal"> Read more...</a></span>"
+                    <!--I strongly believe that Squad in Touch will benefit all-->
+                    <!--schools who use it and I have found that they are very open and accommodating to-->
+                    <!--suggestions for further developments.”-->
                     <!--<a href="#platform_read_more" data-toggle="modal">Read more</a>-->
                 </p>
 
                 <p>
-                    <strong>Jack Brown</strong>, Subject Leader for PE, Sir John Talbot's School
+                    <strong>Mr Peter Walters</strong>, Head of PE, The Priory School, Shrewsbury
                 </p>
             </div>
         </div>
@@ -1464,6 +1467,36 @@
     </div>
 </div>
 <!--./MODAL WINDOWS-->
+<!-- modal-priory -->
+<div id="priory-school" class="modal fade">
+    <div class="modal-center" data-dismiss="modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <!-- Заголовок модального окна -->
+                <div class="modal-header sportsmen_modal-header">
+                    <button type="button" class="close close-popup" data-dismiss="modal"
+                            aria-hidden="true">
+                    </button>
+                    <h4 class="modal-title">Testimonial</h4>
+                </div>
+                <!-- Основное содержимое модального окна -->
+                <div class="testimonials-title sportsmens_title">
+                    <h4>The Priory School</h4></div>
+                <div class="sportsmens_modal-biography"> “We have been using Squad in Touch now since September 2017.
+                    The biggest benefit to all the staff within the department is that it simply saves time whilst
+                    improving parental contact. Fixtures can quickly be entered onto the calendar and team sheets very
+                    quickly made. This can include sending confirmation to parents/carers regarding the fixture and
+                    details. I strongly believe that Squad in Touch will benefit all schools who use it and I have found
+                    that they are very open and accommodating to suggestions for further developments.”
+                    <br/>
+                    <br>— Mr Peter Walters, Head of PE, The Priory School, Shrewsbury
+                </div>
+                <!-- Футер модального окна -->
+
+            </div>
+        </div>
+    </div>
+</div>
 
 <script src="../dist/app.js" type="text/javascript"></script>
 </body>
