--- a/platform/index.html
+++ b/platform/index.html
@@ -716,6 +716,35 @@
                     </div>
                 </div>
             </div>
+            <div class="item">
+                <div class="container testimonial">
+                    <div class="row">
+                        <div class="col-md-4 col-sm-4">
+                            <div class="testimonial_logo">
+                                <img src="../src/image/CFS-badge.jpg" alt="Sir John Talbot's school">
+                            </div>
+                        </div>
+                        <div class="col-md-7 col-sm-7">
+                            <div class="testimonial_content">
+                                <h4 class="testimonial_title">
+                                    Chichester Free School
+                                </h4>
+                                <p>"This will be the second Academic Year that we have been using Squad In Touch. It has
+                                    been a great help to our school, especially for aiding us in the communication with
+                                    parents. Squad In Touch saves our staff a lot of time spent on fixtures and
+                                    extra-curricular clubs management and makes our life easier through using
+                                    notifications, availability reports and parental consent e-forms. Our PE staff can
+                                    focus on teaching whilst parents and pupils are always kept up to date. "
+
+                                    <br>
+                                    <br>
+                                    — Steve Day, Head of PE, Chichester Free School
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </div>
 
@@ -838,6 +867,27 @@
                             developments.” <br>
                             <br>
                             — Mr Peter Walters, Head of PE, The Priory School, Shrewsbury
+                        </div>
+
+
+                    </div>
+
+                    <div class="item">
+                        <div class="testimonial-mobile">
+                            <div class="testimonial2-school-section">
+                                <img src="../src/image/CFS-badge.jpg" alt="Sir John Talbot's school">
+                            </div>
+                        </div>
+                        <div class="testimonials-title">
+                            <h4>Chichester Free School </h4></div>
+                        <div class="testimonials-subj">"This will be the second Academic Year that we have been using
+                            Squad In Touch. It has been a great help to our school, especially for aiding us in the
+                            communication with parents. Squad In Touch saves our staff a lot of time spent on fixtures
+                            and extra-curricular clubs management and makes our life easier through using notifications,
+                            availability reports and parental consent e-forms. Our PE staff can focus on teaching whilst
+                            parents and pupils are always kept up to date. " <br>
+                            <br>
+                            — Steve Day, Head of PE, Chichester Free School
                         </div>
 
 
