--- a/platform/index.html
+++ b/platform/index.html
@@ -875,7 +875,7 @@
                     <div class="item">
                         <div class="testimonial-mobile">
                             <div class="testimonial2-school-section">
-                                <img src="../src/image/CFS-badge.jpg" alt="Sir John Talbot's school">
+                                <img src="../src/image/CFS-badge.png" alt="Sir John Talbot's school">
                             </div>
                         </div>
                         <div class="testimonials-title">
