--- a/platform/index.html
+++ b/platform/index.html
@@ -721,7 +721,7 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-4">
                             <div class="testimonial_logo">
-                                <img src="../src/image/CFS-badge.jpg" alt="Sir John Talbot's school">
+                                <img src="../src/image/CFS-badge.png" alt="Sir John Talbot's school">
                             </div>
                         </div>
                         <div class="col-md-7 col-sm-7">
