page to send email

--- a/platform/index.html
+++ b/platform/index.html
@@ -1054,7 +1054,7 @@
                         <div class="email_container">
                             <input type="email" class="email-height ask-form-background contact_form-email"
                                    id="e-mail"/>
-                            <button id="send-email" class="send_button" onclick="sendmail()">
+                            <button id="send-email" class="send_button" onclick="sendmail('Platform')">
                                 Send
                             </button>
                         </div>
