--- a/sport/index.html
+++ b/sport/index.html
@@ -1149,7 +1149,7 @@
                         <div class="email_container">
                             <input type="email" class="email-height ask-form-background contact_form-email"
                                    id="e-mail"/>
-                            <button id="send-email" class="send_button" onclick="sendmail()">
+                            <button id="send-email" class="send_button" onclick="sendmail('Sport')">
                                 Send
                             </button>
                         </div>
