--- a/sport/index.html
+++ b/sport/index.html
@@ -62,7 +62,7 @@
                                     <ul class="nav navbar-nav main_nav hidden-xs hidden-sm">
                                         <li class="main-menu-item"><a class="smooth_scroll" href="#howitworks">How it
                                             works</a></li>
-                                        <li class="main-menu-item"><a class="smooth_scroll" href="#speakers">Team</a>
+                                        <li class="main-menu-item"><a class="smooth_scroll" href="#team">Team</a>
                                         </li>
                                         <li class="main-menu-item"><a class="smooth_scroll"
                                                                       href="#testimonials">Testimonials</a>
@@ -289,7 +289,7 @@
 
 
 <!--Sports star team-->
-<section id="speakers" class="star_team_section hidden-xs">
+<section id="team" class="star_team_section hidden-xs">
 
     <div class="container mar">
         <div class="row">
